# srv6-ai-fabric

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml  xrd-topo.yml
04-node-sonic-vxr/: topology-left.yaml  topology.yaml
08-node-sonic/: README.md  add-br.sh  topology-vpp.yaml  topology-vs.yaml
08-node-sonic-vpp/: README.md  deploy-playbook.yaml  sonic-playbook.yaml  topology-dci.yaml  topology-ngdp.yaml  topology-vpp.yaml  trex-playbook.yaml
08-node-sonic-vpp/ansible/: add-br.sh  deploy-playbook.yaml  (+6 more)
20-node-xrd/: xrd-topo.yml
4-plane-8x16/: AGENTS.md  README.md  design-appendix.md  generate_fabric.py  quickstart.md  routes.py  spray.md  test-routes.sh  topology.clab.yaml
backend-ebgp/: hosts.cfg
control-app/: jalapeno.py  training-job01.json  training-job02.json
docs/: architecture.md  design-appendix.md  design-fabric.md  design-mrc.md  design-multi-tenant.md  quickstart.md  resilient-ai-supercomputer-networking-using-mrc-and-srv6.md  results-format.md  running.md  spray-protocol.md
generators/: __init__.py  fabric.py
host-image/: Dockerfile
scripts/: config.sh  validate.sh
sonic/: sonic-topo.yaml
srv6_fabric/: __init__.py  health.py  netem.py  policy.py  reorder.py  report.py  runner.py  topo.py
tests/: __init__.py  test_ev_state.py  test_health.py  test_mrc_agent_io.py  test_mrc_agent_logic.py  test_mrc_integration.py  test_netem.py  test_policy.py  test_probe.py  test_reorder.py  test_report.py  test_routes_topo_inference.py  test_runner.py  test_topo.py
trex/: start_host00.py  trex-list.cfg  trex-setup.sh  trex.md
(+875 files in other folders)
